tests/cases/compiler/binaryArithmatic4.ts
var v = null | null;
//~^ ERROR: The value 'null' cannot be used here.
//~| ERROR: The value 'null' cannot be used here.